samples/good/Imports/aml-16-custom-no-plm-dependson/imports.mf
<imports>
  <package name="com.example.mycustompackage" path=".\" />
</imports>
