samples/bad/Imports/aml-08-missing-name/imports.mf
<imports>
  <package path="PLM\Import" />
</imports>
